--- a/arches_arcgispro_addin/arches_arcgispro_addin.csproj
+++ b/arches_arcgispro_addin/arches_arcgispro_addin.csproj
@@ -126,10 +126,13 @@
     <AddInContent Include="DarkImages\AddInDesktop32.png" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviours\HoverLinkBehaviour.cs" />
+    <Compile Include="Behaviours\TextBoxBindingUpdateOnEnterBehaviour.cs" />
     <Compile Include="CreateResource.xaml.cs">
       <DependentUpon>CreateResource.xaml</DependentUpon>
     </Compile>
     <Compile Include="CreateResourceViewModel.cs" />
+    <Compile Include="Custom\CustomSchemes.cs" />
     <Compile Include="SaveResource.xaml.cs">
       <DependentUpon>SaveResource.xaml</DependentUpon>
     </Compile>
@@ -141,6 +144,10 @@
     <Compile Include="MainDockpaneViewModel.cs" />
     <Compile Include="Module1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ChromePane.xaml.cs">
+      <DependentUpon>ChromePane.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\ChromePaneViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AddInContent Include="Images\GenericButtonBlue16.png" />
@@ -167,6 +174,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\ChromePane.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <AddInContent Include="Images\GenericButtonPurple16.png" />
@@ -191,6 +202,14 @@
     <AddInContent Include="Images\Stormtrooper16.png" />
     <AddInContent Include="Images\Stormtrooper32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\esri_arcgis-pro-sdk_wiki.html" />
+    <AddInContent Include="Images\chrome16.png" />
+    <AddInContent Include="Images\chrome32.png" />
+    <AddInContent Include="Images\chromium16.png" />
+    <AddInContent Include="Images\chromium32.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!--
   PackageAction can be:
